# tripswitch-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: client.rs  errors.rs  ingest.rs  lib.rs  metadata.rs  sse.rs  types.rs
src/admin/: breakers.rs  errors.rs  events.rs  mod.rs  notifications.rs  pager.rs  pagers.rs  project_keys.rs  projects.rs  routers.rs  types.rs  workspaces.rs
tests/: admin_integration.rs  client_integration.rs
