[package]
name = "tripswitch"
version = "0.1.1"
edition = "2021"
description = "Official Rust SDK for the Tripswitch circuit breaker service"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rand = "0.9"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
httpmock = "0.8"
serde_json = "1"
